[package]
name = "autoinstall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
question = "0.2.2"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "native-tls-crate", "default-tls", "hyper-tls", "__tls"] }
serde_json = { version = "1.0.89", default-features = false }
